--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,7 @@
 body
 {
-<<<<<<< HEAD
-    color: rgb(9, 88, 36);
-=======
+    background: gray;
     color:rgb(9, 9, 34);
->>>>>>> cabecera
     text-align: left;
     font-family: 'Arial';
     font-size: 16px;
@@ -14,11 +11,16 @@ body
 #cabecera
 {
     background: rgb(4, 4, 97);
-    box-shadow: 0px 5px 50px 0px green;
+    box-shadow: 0px 5px 50px 0px blue;
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
@@ -40,5 +42,7 @@ body
 }
 #post
 {
+    background: rgb(4, 4, 97);
+    color:white;
     padding: 1emm;
 }
