--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,3 +42,11 @@ body
 {
     padding: 1emm;
 }
+#footer
+{
+    background: tomato;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+
+}
