Agregué una Imagen al Blog y la centre en css

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,6 +46,11 @@ body
     color:white;
     padding: 1emm;
 }
+#equipo
+{
+    display:block;
+    margin:auto;
+    }
 #footer
 {
     background: tomato;
