agregué otra imagen push pull

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,6 +51,11 @@ body
     display:block;
     margin:auto;
     }
+#puerta
+{
+    display:block;
+    margin:auto;
+    }
 #footer
 {
     background: tomato;
